--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "antd": "^2.8.0",
-    "babel-runtime": "^6.9.2",
+    "babel-runtime": "^6.23.0",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.0",
     "react": "^15.4.0",
@@ -29,6 +29,6 @@
     "expect": "^1.20.2",
     "husky": "^0.12.0",
     "redbox-react": "^1.3.2",
-    "roadhog": "^0.6.0-beta2"
+    "roadhog": "^0.6.0-beta.3"
   }
 }
